--- a/modules/construct/package.json
+++ b/modules/construct/package.json
@@ -39,9 +39,9 @@
   "dependencies": {
     "@ganuz/apply": "^0.1.0",
     "@ganuz/set-prototype-of": "^0.1.0",
-    "@pakal/get-global": "0.2.0",
-    "@pakal/is-native": "0.2.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/get-global": "^0.2.1",
+    "@pakal/is-native": "^0.2.1",
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
