--- a/modules/copy-properties/package.json
+++ b/modules/copy-properties/package.json
@@ -40,7 +40,7 @@
   "dependencies": {
     "@ganuz/define-property": "^0.1.0",
     "@ganuz/each-properties": "^0.1.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
