--- a/modules/set-prototype-of/package.json
+++ b/modules/set-prototype-of/package.json
@@ -43,9 +43,9 @@
   "dependencies": {
     "@ganuz/extend-properties": "^0.1.0",
     "@ganuz/get-own-property-descriptors": "^0.1.0",
-    "@pakal/get-global": "0.2.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/tryify": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/get-global": "^0.2.1",
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/tryify": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
