--- a/modules/_get-metadata-map/package.json
+++ b/modules/_get-metadata-map/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@ganuz/_map": "^0.1.0",
     "@ganuz/_weak-map": "^0.1.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
