--- a/modules/_map/package.json
+++ b/modules/_map/package.json
@@ -24,6 +24,6 @@
     "url": "https://github.com/yisraelx/ganuz/issues"
   },
   "dependencies": {
-    "@pakal/get-global": "0.2.0"
+    "@pakal/get-global": "^0.2.1"
   }
 }
