--- a/modules/append-prototype-of/package.json
+++ b/modules/append-prototype-of/package.json
@@ -39,8 +39,8 @@
   "dependencies": {
     "@ganuz/each-prototype-of": "^0.1.0",
     "@ganuz/set-prototype-of": "^0.1.0",
-    "@pakal/is-native": "0.2.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/is-native": "^0.2.1",
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
