--- a/modules/define-metadata-with/package.json
+++ b/modules/define-metadata-with/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@ganuz/define-metadata": "^0.1.0",
     "@ganuz/get-own-metadata": "^0.1.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
