--- a/modules/each-properties/package.json
+++ b/modules/each-properties/package.json
@@ -41,7 +41,7 @@
     "@ganuz/apply": "^0.1.0",
     "@ganuz/get-own-property-descriptor": "^0.1.0",
     "@ganuz/own-keys": "^0.1.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
