--- a/modules/each-prototype-of/package.json
+++ b/modules/each-prototype-of/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@ganuz/get-prototype-of": "^0.1.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
