--- a/modules/each/package.json
+++ b/modules/each/package.json
@@ -40,7 +40,7 @@
   "dependencies": {
     "@ganuz/apply": "^0.1.0",
     "@ganuz/own-keys": "^0.1.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
