--- a/modules/get-own-property-descriptors/package.json
+++ b/modules/get-own-property-descriptors/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@ganuz/each-properties": "^0.1.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
