--- a/modules/get/package.json
+++ b/modules/get/package.json
@@ -45,8 +45,8 @@
     "@ganuz/apply": "^0.1.0",
     "@ganuz/get-own-property-descriptor": "^0.1.0",
     "@ganuz/has": "^0.1.0",
-    "@pakal/get-global": "0.2.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/get-global": "^0.2.1",
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
