--- a/modules/is-configurable/package.json
+++ b/modules/is-configurable/package.json
@@ -39,8 +39,8 @@
   },
   "dependencies": {
     "@ganuz/get-own-property-descriptor": "^0.1.0",
-    "@pakal/assertify": "0.2.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/assertify": "^0.2.1",
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
