--- a/modules/is-extensible/package.json
+++ b/modules/is-extensible/package.json
@@ -37,9 +37,9 @@
     "url": "https://github.com/yisraelx/ganuz/issues"
   },
   "dependencies": {
-    "@pakal/assertify": "0.2.0",
-    "@pakal/get-global": "0.2.0",
-    "@pakal/is-type-of": "0.2.0",
-    "@pakal/type-of": "0.2.0"
+    "@pakal/assertify": "^0.2.1",
+    "@pakal/get-global": "^0.2.1",
+    "@pakal/is-type-of": "^0.2.1",
+    "@pakal/type-of": "^0.2.1"
   }
 }
