--- a/modules/is-writable/package.json
+++ b/modules/is-writable/package.json
@@ -39,6 +39,6 @@
   },
   "dependencies": {
     "@ganuz/get-own-property-descriptor": "^0.1.0",
-    "@pakal/assertify": "0.2.0"
+    "@pakal/assertify": "^0.2.1"
   }
 }
